objects/pw_cc__FieldToValidate__c.object
<CustomObject>
    <description>Pre v1.7 FieldToValidate object now deprecated to allow for new features, please migrate your settings to the new custom settings objects and disregard.</description>
    <fields>
        <fullName>pw_cc__AllowOnlyListedCountries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Listed Countries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__AssociatedStateFieldName__c</fullName>
        <label>Associated State Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__CountryFieldName__c</fullName>
        <label>Country Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__CountryRelationshipField__c</fullName>
        <label>Country Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsCountryMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__Standardize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standardization</label>
        <type>Checkbox</type>
    </fields>
    <label>FieldToValidate</label>
    <listViews>
        <fullName>pw_cc__All</fullName>
        <columns>pw_cc__ObjectName__c</columns>
        <columns>pw_cc__CountryFieldName__c</columns>
        <columns>pw_cc__AssociatedStateFieldName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>FieldToValidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FieldsToValidate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>